<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context=".Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/correos"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="26dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="text|textPersonName"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/contras"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/contras"
                android:layout_width="281dp"
                android:layout_height="42dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/contrase_a"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/ingresar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/correos"
                tools:targetApi="o" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ingresar"
                    style="@android:style/Widget.Holo.Button.Borderless"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/app_name"
                    android:text="@string/ingresar"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/registrar"
                    style="@android:style/Widget.Holo.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:contentDescription="@string/app_name"
                    android:text="@string/registrarse"
                    android:textAllCaps="true"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ingresar" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progreso"
                style="?android:attr/progressBarStyle"
                android:layout_width="124dp"
                android:layout_height="122dp"
                android:layout_marginStart="98dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="98dp"
                android:layout_marginBottom="10dp"
                android:indeterminate="true"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/registrar" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>