<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context=".Registro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nombre"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/nm"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/apellido"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contras"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/apellido"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/aps"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/dpi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nombre"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/dpi"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/dpis"
                android:importantForAutofill="no"
                android:inputType="number"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/apellido"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/correos"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="text|textPersonName"
                android:selectAllOnFocus="true"
                android:singleLine="true"
                app:layout_constraintBottom_toTopOf="@+id/contras"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/contras"
                android:layout_width="279dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/contrase_a"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@+id/nombre"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/correos"
                tools:targetApi="o" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:minHeight="48dp"
                android:layout_marginTop="13dp"
                app:layout_constraintHorizontal_bias="0.545">

                <ProgressBar
                    android:id="@+id/prog"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="103dp"
                    android:layout_height="104dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:indeterminate="true"
                    android:visibility="invisible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/registror"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dpi" />

                <Button
                    android:id="@+id/registror"
                    style="@android:style/Widget.Holo.Button.Borderless"
                    android:layout_width="132dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="34dp"
                    android:text="@string/registrarse"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dpi" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>